--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,10 @@ android {
         jvmTarget = '1.8'
     }
     buildToolsVersion '30.0.2'
+
+    viewBinding{
+        enabled  = true
+    }
 }
 
 
