--- a/lib_core/build.gradle
+++ b/lib_core/build.gradle
@@ -29,6 +29,10 @@ android {
         jvmTarget = '1.8'
     }
     buildToolsVersion '30.0.2'
+
+    viewBinding{
+        enabled  = true
+    }
 }
 
 dependencies {
